# snarkey

./: Cargo.toml  README.md
benches/: poseidon_circuit.rs
snarkey-cli/: Cargo.toml
snarkey-cli/src/: encryption.rs  main.rs  zk_verifier.rs
snarkey-core/: Cargo.toml
snarkey-core/benches/: encryption_bench.rs
snarkey-core/src/: add_chip.rs  lib.rs  utils.rs
snarkey-core/src/circuit/: add_chip.rs  encryption_circuit.rs  mod.rs  poseidon_circuit.rs
snarkey-core/src/encryption/: decrypt.rs  encrypt.rs  key_schedule.rs  mod.rs
snarkey-core/src/hash/: mod.rs  poseidon.rs
src/: encrypt.rs  lib.rs  main.rs  poseidon_circuit.rs  temp.rs
src/circuit/: mod.rs
tests/: encryption_tests.rs
